--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,3 +11,5 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+[x-cloak] { display: none !important; }
